@@ -17,7 +17,7 @@ Url = "http://kelsolaar.hdrlabs.com/sIBL_GUI/Repository/Templates/3dsMax_VRay_St
 Comment = "3dsMax VRay Template: Implement Ibl Sets Compatibility Guard."
 
 [Maya_MR_Lightsmith]
-Release = 0.9.2
+Release = 1.0.0
 Type = "Nightly"
 Url = "http://kelsolaar.hdrlabs.com/sIBL_GUI/Repository/Templates/Maya_MR_Lightsmith/Nightly/Maya_MR_Lightsmith.zip"
 Comment = "Maya Mental Ray Lightsmith Template: Additional Geometries Hierarchical Control."
@@ -29,25 +29,25 @@ Url = "http://kelsolaar.hdrlabs.com/sIBL_GUI/Repository/Templates/Maya_Arnold_St
 Comment = "Maya Arnold Template: Initial Public Release."
 
 [Maya_MR_Standard]
-Release = 1.8.2
+Release = 2.0.0
 Type = "Stable"
 Url = "http://kelsolaar.hdrlabs.com/sIBL_GUI/Repository/Templates/Maya_MR_Standard/Stable/Maya_MR_Standard.zip"
 Comment = "Maya Mental Ray Template: Implement Ibl Sets Compatibility Guard."
 
 [Maya_RfM_Standard]
-Release = 1.1.8
+Release = 2.0.0
 Type = "Stable"
 Url = "http://kelsolaar.hdrlabs.com/sIBL_GUI/Repository/Templates/Maya_RfM_Standard/Stable/Maya_RfM_Standard.zip"
 Comment = "Renderman For Maya Template: Implement Ibl Sets Compatibility Guard."
 
 [Maya_VRay_Dome_Light]
-Release = 1.2.8
+Release = 2.0.0
 Type = "Stable"
 Url = "http://kelsolaar.hdrlabs.com/sIBL_GUI/Repository/Templates/Maya_VRay_Dome_Light/Stable/Maya_VRay_Dome_Light.zip"
 Comment = "VRay For Maya Dome Light Template: Implement Ibl Sets Compatibility Guard."
 
 [Maya_VRay_Lightsmith]
-Release = 0.9.2
+Release = 1.0.0
 Type = "Nightly"
 Url = "http://kelsolaar.hdrlabs.com/sIBL_GUI/Repository/Templates/Maya_VRay_Lightsmith/Nightly/Maya_VRay_Lightsmith.zip"
 Comment = "VRay For Maya Ligthsmith Template: Additional Geometries Hierarchical Control."
