@@ -8,7 +8,7 @@ Author = @Author | Kel Solaar | String | Author
 Email = @Email | thomas.mansencal@gmail.com | String | Email
 Url = @Url | http://thomasmansencal.com/ | String | Url
 Software = @Software | Maya | String | Software
-Version = @Version | 2011 | String | Version
+Version = @Version | 2008 To 2011 | String | Version
 Renderer = @Renderer | Mental Ray | String | Renderer
 OutputScript = @OutputScript | sIBL_Maya_Import.py | String | Output Script
 Comment = @Comment | This is Maya 2K Mental Ray Template. | String | Comment
