@@ -59,9 +59,8 @@
 			<li><strong>Create Ground</strong>: A Plane is added to the Scene.</li>
 			<li><strong>Ground Shadow Catcher</strong>: A mip_matteshadow Shader is assigned to the Ground.</li>
 			<li><strong>Physical Sun</strong>: The Sun is created with a mia_physicalsun shader.</li>
-			<li><strong>Activate Final Gather</strong>: Final Gathering is activated in the current Scene.</li>
+			<li><strong>Activate Indirect Lighting</strong>: Indirect Lighting is activated in the current Scene.</li>
 			<li><strong>Activate Linear Workflow</strong>: Connect a mia_exposure_simple shader in current / selected Camera(s).</li>
-			<li><strong>Use Framebuffer Gamma</strong>: Sets the Render Globals Framebuffer Gamma to appropriate value. The mia_exposure_simple Gamma is set to 1.0.</li>
 			<li><strong>Use Photographic Tonemapper</strong>: A &#8220;mia_exposure_photographic&#8221; lens shader is used instead of the &#8220;mia_exposure_simple&#8221;.</li>
 		</ul>
 		<h3>Scene Components</h3>
