@@ -49,7 +49,7 @@
 		</ul>
 		<h3>Additional Attributes</h3>
 		<ul>
-			<li><strong>Activate Indirect Illumination</strong>: Indirect Illumination is activated in the current Scene.</li>
+			<li><strong>Activate Indirect Lighting</strong>: Indirect Lighting is activated in the current Scene.</li>
 			<li><strong>Activate Linear Workflow</strong>: Sets the Output Gamma to 2.2.</li>
 		</ul>
 		<h3>Scene Components</h3>
