@@ -57,7 +57,7 @@
 			<li><strong>Hide Lights</strong>: Hides all current Scene lights.</li>
 			<li><strong>Create Ground</strong>: A Plane is added to the Scene.</li>
 			<li><strong>Ground Shadow Catcher</strong>: A VRayObjectProperties Node is assigned to the Ground.</li>
-			<li><strong>Activate Indirect Illumination</strong>: Indirect Illumination is activated in the current Scene.</li>
+			<li><strong>Activate Indirect Lighting</strong>: Indirect Lighting is activated in the current Scene.</li>
 			<li><strong>Activate Linear Workflow</strong>: Sets the Output Gamma to 2.2.</li>
 		</ul>
 		<h3>Scene Components</h3>
